update email-us.html with NAV margins  & paddings for Accessibility practise

--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <header>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>title</title>
      <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
@@ -18,6 +18,20 @@
   </header>
 
   <style>
+
+
+   nav{
+     text-align: inherit;
+     padding: 1rem;
+     margin: 1 rem;
+             }
+nav a{
+  padding: 1rem;
+  margin: 1 rem;
+}
+
+
+
   p3 {
     background-color: yellow;
   }
@@ -25,6 +39,9 @@
     background-color: yellow;
   }
 
+ input3{
+   background-color: yellow;
+ }
   </style>
 
   <form action="/action_page.php">
@@ -52,7 +69,7 @@
         <input type="radio" name="choice" value="Birthdays"> Birthdays<br>
         <input type="radio" name="choice" value="Fund Raising"> Fund Raising<br>
         <input type="radio" name="choice" value="other"> Other<br>
-        <input type="submit"  value="Submit">
+        <input type="submit"   value="Submit">
 
     </form>
 
