update file with Ease of Clickability by implemeting  padding and margin

--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -20,7 +20,7 @@
   <style>
 
 
-   nav{
+nav{
      text-align: inherit;
      padding: 1rem;
      margin: 1 rem;
@@ -29,7 +29,15 @@ nav a{
   padding: 1rem;
   margin: 1 rem;
 }
-
+input{
+  text-align: inherit;
+  padding: 1rem;
+  margin: 1rem;
+          }
+input a {
+padding: 10rem;
+margin: 10rem;
+}
 
 
   p3 {
@@ -70,49 +78,41 @@ nav a{
         <input type="radio" name="choice" value="Fund Raising"> Fund Raising<br>
         <input type="radio" name="choice" value="other"> Other<br>
         <input type="submit"   value="Submit">
-
     </form>
-
   <br>
-
-
-
-<div class="columns">
-<!--  <img src="images/annie-spratt-450564-unsplash.jpg" width=250px  height=350px   padding= 10px  border-radius= 10px alt="This is a photo of two kids doing archery"  >
--->
-
-<p>Play, pause and then play the video again.</p>
-
-<video id="myVideo" width="320" height="176" controls>
-  <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4">
-<source src="SampleVideo_1280x720_1mb.ogv" type="video/ogg">
-  Your browser does not support HTML5 video.
-</video>
-
-<script>
-var vid = document.getElementById("myVideo");
-vid.onplaying = function() {
-  alert("Video incorporated for Accessiility strategy requirement for Lesson10");
-};
-</script>
-
-
-
-</div>
-
-<div class="columns">
-  <p>
-    Archery Academy Staff would like to thank your
-    for your email inquiry.  Please check back your email
-    soon for our response. Thank you.
-
-  <audio controls>
-  <source src="images/recording.ogg" type="audio/ogg">
-  <source src="images/recording.m4a" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
+  <div class="columns">
+    <p>
+      Archery Academy Staff would like to thank your
+      for your email inquiry.  Please check back your email
+      soon for our response. Thank you.
 </p>
+    <audio controls>
+    <source src="images/recording.ogg" type="audio/ogg">
+    <source src="images/recording.m4a" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 </div>
+
+
+<div class="columns">
+        <p>Play, pause and then play the video again.</p>
+
+        <video id="myVideo" width="320" height="176" controls>
+            <source src="SampleVideo_1280x720_1mb.mp4" type="video/mp4">
+            <source src="SampleVideo_1280x720_1mb.ogv" type="video/ogg">
+  Your browser does not support HTML5 video.
+        </video>
+
+        <script>
+        var vid = document.getElementById("myVideo");
+        vid.onplaying = function() {
+        alert("Video incorporated for Accessiility strategy requirement for Lesson10");
+        };
+        </script>
+</div>
+
+
+
 
 <div class="columns">
   <img src="images/annie-spratt-450564-unsplash.jpg" width=250  height=350  alt="This is a photo of two kids doing archery"  >
@@ -129,42 +129,3 @@ Your browser does not support the audio element.
   are welcome and valuable members of our community.
 </small>
 </p>
-
-
-
-
-
-
-
-<!--
-
-  <form>
-        <input type="checkbox" name="choice" value="BASIC"> BASIC<br>
-        <input type="radio" name="choice" value="INTERMEDIATE"> INTERMEDIATE<br>
-        <input type="radio" name="choice" value="ADVANCE"> ADVANCE<br>
-        <input type="radio" name="choice" value="Corporate Events"> Corporate Events<br>
-        <input type="radio" name="choice" value="Birthdays"> Birthdays<br>
-        <input type="radio" name="choice" value="Fund Raising"> Fund Raising<br>
-        <input type="radio" name="choice" value="other"> Other<br>
-<br>
-        <input type="submit"  value="Submit">
-
-      </form>
-
-<br>
-      <img src="images/annie-spratt-450564-unsplash.jpg" width=250px  height=350px   padding= 10px  border-radius= 10px alt="This is a photo of two kids doing archery"  >
-<br>
-
--->
-
-  <!--      <img src="images/footerimage.jpg"    alt="footer"  class="responsive" >-->
-
-
-
-
-
-
-
-
-
-<!--  -->
