update file with tech Implementation for Accessibility best practise

--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -19,6 +19,7 @@
 
   <style>
 
+<!-- This contains revisions for Technical Implementation for Accessibility Best Practice-->
 
 nav{
      text-align: inherit;
@@ -102,7 +103,7 @@ margin: 10rem;
             <source src="SampleVideo_1280x720_1mb.ogv" type="video/ogg">
   Your browser does not support HTML5 video.
         </video>
-
+<!-- This contains revisions for Technical Implementation for Accessibility Best Practice when incorporating a video clip-->
         <script>
         var vid = document.getElementById("myVideo");
         vid.onplaying = function() {
@@ -115,7 +116,10 @@ margin: 10rem;
 
 
 <div class="columns">
-  <img src="images/annie-spratt-450564-unsplash.jpg" width=250  height=350  alt="This is a photo of two kids doing archery"  >
+
+
+  <img src="images/annie-spratt-450564-unsplash.jpg" width=250  height=350 alt="This is a photo of two kids doing archery">
+  <p> This image contains image alt tags for accessibility practice</p>
 </div>
 
 
