--- a/lesson10/email-us.html
+++ b/lesson10/email-us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <header>
+  <head>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>title</title>
      <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
@@ -16,15 +16,13 @@
     <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
   </header>
-
   <style>
 
-<!-- This contains revisions for Technical Implementation for Accessibility Best Practice-->
-
-nav{
+ This contains revisions for Technical Implementation for Accessibility Best Practice
+ nav{
      text-align: inherit;
      padding: 1rem;
-     margin: 1 rem;
+     margin: 1rem;
              }
 nav a{
   padding: 1rem;
@@ -52,6 +50,7 @@ margin: 10rem;
    background-color: yellow;
  }
   </style>
+
 
   <form action="/action_page.php">
       <h2>EMAIL INQUIRY</h2>
