--- a/lesson09/email-us.html
+++ b/lesson09/email-us.html
@@ -4,7 +4,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>title</title>
      <img src="images/archeryAcademy-logo-color.png"  alt="Archery Academy logo " class="center">
-       <link rel="stylesheet" type="text/css" href="styles.css">
+       <link rel="stylesheet" type="text/css" href="styles2.css">
     <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 <header>
 
